@@ -552,9 +552,6 @@ div.tleft {
 img.thumbborder {
 	border: 1px solid #dddddd;
 }
-.hiddenStructure {
-	display: none;
-}
 .mw-warning {
 	border: 1px solid #aaa;
 	background-color: #f9f9f9;
